--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,8 @@
                 <input class="btn" value="submit!" type="submit">
             </div>
         </form>
-        <div class="answer">{{answer}} {{proba}}</div>
+        <div class="answer">{{answer}}</div>
+        <div class="answer">Probability {{proba}}</div>
         <div class="up_img">
             {% if filepath %}
                 <img class="filepath" src={{filepath}} height="200">
